fix: add margin to inspector for improved spacing

--- a/website/src/css/modules/showcase.module.scss
+++ b/website/src/css/modules/showcase.module.scss
@@ -99,6 +99,7 @@
         transition: all 0.10s ease-in;
         left: 50%;
         transform: translateX(-50%);
+        margin: 6px;
     }
 
     .inspector.active {
